aligning hamburger menu correctly

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -114,23 +114,20 @@ body
 
 .navbar-toggler-icon {
     display: inline-block;
-    width: 1.5em;
-    height: 1.5em;
+    /* width: 1.5em;
+    height: 1.5em; */
+    line-height: 4rem;
     font-size: 3rem;
     vertical-align: middle;
     background-image:none;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
+    color: white !important;
 }
 
 .navbar-toggler:focus {
     box-shadow: none;     
-}
-
-.navbar-toggler-icon
-{
-    color: white !important;
 }
 
 .navbar-nav
@@ -618,23 +615,20 @@ footer
 
     .navbar-toggler-icon {
         display: inline-block;
-        width: 1.5em;
-        height: 1.5em;
+        /* width: 1.5em;
+        height: 1.5em; */
+        line-height: 4rem;
         font-size: 3rem;
         vertical-align: middle;
         background-image:none;
         background-repeat: no-repeat;
         background-position: center;
         background-size: 100%;
+        color: var(--primary-color) !important;
     }
     
     .navbar-toggler:focus {
         box-shadow: none;     
-    }
-    
-    .navbar-toggler-icon
-    {
-        color: var(--primary-color) !important;
     }
 
     .navbar-collapse
@@ -784,23 +778,20 @@ footer
 
     .navbar-toggler-icon {
         display: inline-block;
-        width: 1.5em;
-        height: 1.5em;
+        /* width: 1.5em;
+        height: 1.5em; */
+        line-height: 4rem;
         font-size: 3rem;
         vertical-align: middle;
         background-image:none;
         background-repeat: no-repeat;
         background-position: center;
         background-size: 100%;
+        color: var(--primary-color) !important;
     }
     
     .navbar-toggler:focus {
         box-shadow: none;     
-    }
-    
-    .navbar-toggler-icon
-    {
-        color: var(--primary-color) !important;
     }
 
     .navbar-collapse
